Page projet : correction sur rendement max (avec maximum aligné sur le gain maximum)

--- a/_inc/css/campaign.css
+++ b/_inc/css/campaign.css
@@ -996,7 +996,7 @@ div#project-content-economic_model_automatic div.zone-content table.economic-int
 }
 
 div#project-content-economic_model_automatic div.zone-content table.economic-intro tr td.two-cols.left {
-	width: 47%;
+	width: 46%;
 }
 
 div#project-content-economic_model_automatic div.zone-content table.economic-intro tr td.left h5 {
